# example-ci-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fizzbuzz.cpp  fizzbuzz.hpp
test/: test_fizzbuzz.cpp
